@@ -36,6 +36,7 @@
 - Windows agent doesn't uninstall with a lowercase `c:` drive in the path {pull}23998[23998]
 - Fix reloading of log level for services {pull}[24055]24055
 - Fix: Successfully installed and enrolled agent running standalone{pull}[24128]24128
+- Remove installed services on agent uninstall {pull}[24151]24151
 
 ==== New features
 
